--- a/source/less/local-styles/form.less
+++ b/source/less/local-styles/form.less
@@ -233,7 +233,7 @@
     }
   }
 
-  &--phone {
+  &-phone-phone {
     background-image: url("../img/icon-phone.svg");
     background-size: 21px 21px;
 
@@ -346,6 +346,16 @@
     line-height: 20px;
   }
 
+  .form__input {
+    &--phone {
+margin-top: -50px;
+    }
+  }
+
+  .form__label--text[for='phone'] {
+margin-top: -50px;
+  }
+
   .form__title {
     max-width: none;
     margin-bottom: 68px;
@@ -366,6 +376,7 @@
   .form__input-wrapper {
     margin-bottom: 22px;
 
+
     &--options {
       margin-bottom: 32px;
       margin-left: 60px;
@@ -385,6 +396,7 @@
   .form__list {
     margin-bottom: 73px;
 
+
     &--bordered {
       margin-right: 0;
       margin-left: 0;
@@ -403,7 +415,7 @@
     }
 
     &--column {
-      margin-bottom: 22px;
+      margin-bottom: 72px;
     }
   }
 
@@ -427,6 +439,8 @@
 
       line-height: 30px;
     }
+
+
 
     // Стили для кружка радиобаттонов
 
@@ -492,6 +506,7 @@
     &--contact {
       flex-direction: column;
       align-items: stretch;
+
     }
 
     &--options {
