--- a/source/css/style.css
+++ b/source/css/style.css
@@ -8,8 +8,6 @@
 html {
   line-height: 1.15;
   /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
 }
 /* Sections
    ========================================================================== */
@@ -53,7 +51,7 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
+  font-family: monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -73,8 +71,6 @@ a {
 abbr[title] {
   border-bottom: none;
   /* 1 */
-  text-decoration: underline;
-  /* 2 */
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
   /* 2 */
@@ -93,7 +89,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  font-family: monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -173,12 +169,6 @@ select {
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-/**
- * Remove the inner border and padding in Firefox.
- */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -258,24 +248,17 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
   outline-offset: -2px;
   /* 2 */
 }
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
   font: inherit;
   /* 2 */
 }
@@ -2888,15 +2871,15 @@ use.page-footer__social-img--fb-mobile {
 .form__input--email.form__input--error {
   background-image: url("../img/icon-mail-error.svg");
 }
-.form__input--phone {
+.form__input-phone-phone {
   background-image: url("../img/icon-phone.svg");
   background-size: 21px 21px;
 }
-.form__input--phone:focus,
-.form__input--phone:active {
+.form__input-phone-phone:focus,
+.form__input-phone-phone:active {
   background-image: url("../img/icon-phone-active.svg");
 }
-.form__input--phone.form__input--error {
+.form__input-phone-phone.form__input--error {
   background-image: url("../img/icon-phone-error.svg");
 }
 .form__input:hover + .form__label--icon::before {
@@ -2961,6 +2944,12 @@ use.page-footer__social-img--fb-mobile {
     font-size: 20px;
     line-height: 20px;
   }
+  .form__input--phone {
+    margin-top: -50px;
+  }
+  .form__label--text[for='phone'] {
+    margin-top: -50px;
+  }
   .form__title {
     max-width: none;
     margin-bottom: 68px;
@@ -3008,7 +2997,7 @@ use.page-footer__social-img--fb-mobile {
     margin-top: -20px;
   }
   .form__list--column {
-    margin-bottom: 22px;
+    margin-bottom: 72px;
   }
   .form__input {
     min-height: 50px;
