--- a/source/less/local-styles/form.less
+++ b/source/less/local-styles/form.less
@@ -348,12 +348,12 @@
 
   .form__input {
     &--phone {
-margin-top: -50px;
+      margin-top: -50px;
     }
   }
 
-  .form__label--text[for='phone'] {
-margin-top: -50px;
+  .form__label--text[for="phone"] {
+    margin-top: -50px;
   }
 
   .form__title {
@@ -376,7 +376,6 @@ margin-top: -50px;
   .form__input-wrapper {
     margin-bottom: 22px;
 
-
     &--options {
       margin-bottom: 32px;
       margin-left: 60px;
@@ -395,7 +394,6 @@ margin-top: -50px;
 
   .form__list {
     margin-bottom: 73px;
-
 
     &--bordered {
       margin-right: 0;
@@ -439,8 +437,6 @@ margin-top: -50px;
 
       line-height: 30px;
     }
-
-
 
     // Стили для кружка радиобаттонов
 
@@ -506,7 +502,6 @@ margin-top: -50px;
     &--contact {
       flex-direction: column;
       align-items: stretch;
-
     }
 
     &--options {
