--- a/source/less/local-styles/form.less
+++ b/source/less/local-styles/form.less
@@ -233,7 +233,7 @@
     }
   }
 
-  &--phone {
+  &-phone-phone {
     background-image: url("../img/icon-phone.svg");
     background-size: 21px 21px;
 
@@ -345,7 +345,6 @@
     font-size: 20px;
     line-height: 20px;
   }
-
 
   .form__label--text[for="phone"] {
     margin-top: -50px;
